add vm option